--- a/Xiomi/css/default.css
+++ b/Xiomi/css/default.css
@@ -67,7 +67,7 @@ p {
 .header h1 a {
   margin:22px 100px;
   width:52px; height:56px;
-  background:url(../image/logo.png)no-repeat;
+  background:url(../image_3/logo.png)no-repeat;
   background-position:0 0;
   transition:0.5s;
   height:56px;
@@ -223,7 +223,7 @@ nav {
   left:30%;
 }
 .fix_box {
-  background:url('../image/kv-bg.jpg')
+  background:url('../image_3/kv-bg.jpg')
 }
 
 /* video section */
@@ -424,7 +424,7 @@ video {
 }
 .gallerybox {
   clip-path: inset(40% 20% 0);
-  background: url(../image/index-06-backimg02.png) no-repeat center center;
+  background: url(../image_2/index-06-backimg02.png) no-repeat center center;
   background-size: 1903px;
   height:100%;
 }
@@ -717,7 +717,7 @@ video {
   width:100%;
   padding-top:61px;
   height:892.03px;
-  background:url(../image/index-14-img01.png)no-repeat center 0/cover;
+  background:url(../image_2/index-14-img01.png)no-repeat center 0/cover;
   position:relative;
   top:0;
   left:0;
@@ -909,7 +909,7 @@ span.secline {
 .MIUI {
   width:100%;
   height:780px;
-  background:url(image/MIUI11_001.png) no-repeat center;
+  background:url(image_3/MIUI11_001.png) no-repeat center;
   position:relative;
   top:0;
   background:#000;
@@ -951,7 +951,7 @@ span.secline {
   height:10000px;
 }
 .banner {
-  background:url(../image/index-19-img01.png);
+  background:url(../image_3/index-19-img01.png);
   width:100%;
   height:211.84px;
   text-align: center;
