--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ body {
   width: 100%;
   height: 100%;
   transition:1s ease;
+  margin:0 auto;
 }
 header {
   width: 100%;
@@ -52,7 +53,7 @@ header {
 }
 .card {
 	position: relative;
-	width: 480px;
+	width: 440px;
 	height: 600px;
 	margin: 30px;
 	box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
@@ -240,7 +241,7 @@ svg circle:nth-child(2) {
 {
 	position: fixed;
 	top: 20px;
-	right: 20px;
+	right: 50px;
 	width: 50px;
 	height: 50px;
 	background: rgba(255,255,255,0.1);
@@ -273,6 +274,18 @@ svg circle:nth-child(2) {
 .Hamburger_nav.active ion-icon.open
 {
 	display: none;
+}
+.viewBtn {
+	display:block;
+	  margin-top:30px;
+	  padding:5px 10px;
+	  background:#fff;
+	  color:#000;
+	  width:200px;
+	  text-align:center;
+	  font-weight:700;
+	  font-size:35px;
+	  border-radius: 25px;
 }
 @media screen and (min-width: 1024px) {
 	header {
