--- a/css/index.css
+++ b/css/index.css
@@ -301,6 +301,15 @@ svg circle:nth-child(2) {
 	.Hamburger_nav {
 	  display: none;
 	}
+	.card h2 {
+		position: absolute;
+		top: 0px;
+		left: 18%;
+		transform: translateX(50%);
+		font-size: 4em;
+		color: rgba(255,255,255,0.05);
+		pointer-events: none;
+	}
   .nav {
     padding:0;
     position:fixed;
