--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  font-family: 'Nanum Gothic Coding', monospace;
+  font-family: 'Yeon Sung', cursive;
 }
 a {
   text-decoration: none;
@@ -45,11 +46,15 @@ header {
   background:#fff;
 }
 /* section1  about me*/
-.section {
+section {
+
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+.hidden {
+	display:none;
 }
 .card {
 	position: relative;
@@ -70,9 +75,9 @@ header {
 .card h2 {
 	position: absolute;
 	top: 30px;
-	left: 20%;
+	left:35%;
 	text-align:center;
-	transform: translateX(65%);
+	transform: translateX(50%);
 	font-size: 3em;
 	color: rgba(255,255,255,0.05);
 	pointer-events: none;
@@ -106,16 +111,20 @@ header {
 
 .S_card {
 	position: relative;
-	width: 130px;
-	background: linear-gradient(0deg, #1b1b1b,#222,#1b1b1b);
+	width: 140px;
 	display: flex;
 	justify-content:  center;
 	align-items: center;
-	height: 220px;
 	border-radius: 4px;
 	text-align: center;
 	overflow: hidden;
 	transition: 0.5s;
+}
+.S_card img {
+	width:95%;
+}
+.s_title {
+	display:block;
 }
 .percent {
 	position: relative;
@@ -178,43 +187,15 @@ svg {
 	height: 150px;
 	z-index: 1000;
 }
-svg circle {
-	width: 100%;
-	height: 100%;
-	fill:  none;
-	stroke: #191919;
-	stroke-width: 10;
-	stroke-Linecap: round;
-	transform: translate(5px ,5px);
-}
-svg circle:nth-child(2) {
-	stroke-dasharray: 440;
-	stroke-dashoffset: 440;
-}
-.S_card:nth-child(2) svg circle:nth-child(2)
-{
-	stroke-dashoffset: calc(70 - (70 * 100) / 100);
-	stroke: #00ff43;
-}
-.S_card:nth-child(3) svg circle:nth-child(2)
-{
-	stroke-dashoffset: calc(70 - (70 * 100) / 80);
-	stroke: #00a1ff;
-}
-.S_card:nth-child(4) svg circle:nth-child(2)
-{
-	stroke-dashoffset: calc(70 - (70 * 100) / 70);
-	stroke: #ff04f7;
-}
 /* section3 Port foilo*/
 #portfoilo {
 
 }
-#portfoilo .content{
+.port .content{
 	flex-direction:column;
 }
-#portfoilo .content h2 {
-	left: -30%;
+.port .content h2 {
+	left: -15%;
 	top: 20px;
 }
 .picture_box {
@@ -292,7 +273,7 @@ svg circle:nth-child(2) {
 	header {
 		display: flex;
 		position: fixed;
-    justify-content: flex-end;
+        justify-content: flex-end;
 		top: 50%;
 		transform: translateY(-50%);
 		height: 50px;
@@ -301,14 +282,19 @@ svg circle:nth-child(2) {
 	.Hamburger_nav {
 	  display: none;
 	}
+	.card {
+		position: relative;
+		width: 600px;
+		height: 600px;
+		margin: 30px;
+	}
 	.card h2 {
 		position: absolute;
-		top: 0px;
-		left: 18%;
 		transform: translateX(50%);
-		font-size: 4em;
-		color: rgba(255,255,255,0.05);
-		pointer-events: none;
+	}
+	.port .content h2 {
+		left: 13%;
+		top: 20px;
 	}
   .nav {
     padding:0;
